@@ -1,10 +1,16 @@
-2014-10-07  Charlie Zender  <zender@uci.edu>
+2014-10-08  Charlie Zender  <zender@uci.edu>
 
 	* NCO 4.4.7 release procedure:
  	Changes since nco-4_4_6: -0->-1,
 	cd ~/nco;cvs tag -d nco-4_4_7;cvs tag -d nco-4_4_7-1
 	cd ~/nco;cvs commit -m "Preparing nco-4.4.7 release"
 	cvs tag -c nco-4_4_7;cvs tag -c nco-4_4_7-1
+
+	* Document newly discovered ncrename problems due to netCDF4 bugs http://nco.sf.net/nco.html#bug_nc4_rename
+
+	* Check more error return codes in ncrename.c. Verifies NCO does not ignore any netCDF errors.
+
+2014-10-07  Charlie Zender  <zender@uci.edu>
 
 	* Add regression checks for valid values in renamed coordinates in netCDF4 files
 
